# kalinka-plugin-qobuz

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: release.yml
debian/: control.in  postinst  prerm  rules  triggers
scripts/: build_deb.sh  build_wheel.sh
src/kalinka_plugin_qobuz/: __init__.py  bundle.py  bundle_cache.py  config_model.py  module_setup.py  qobuz.py  qobuz_autoplay.py  qobuz_reporter.py
tests/: test_bundle_cache.py  test_bundle_load_logging.py  test_smoke.py
