[build-system]
requires = ["setuptools>=68", "wheel", "build", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kalinka-plugin-qobuz"
dynamic = ["version"]
description = "Qobuz plugin for Kalinka Music Player"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    {name = "Dmitry Savin", email = "envelsavinds@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "kalinka-plugin-sdk>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "kalinka-plugin-dev>=1.0,<2",
    "pytest",
    "setuptools-scm",
]

[project.entry-points."kalinka.plugins"]
kalinka_plugin_qobuz = "kalinka_plugin_qobuz:KalinkaPluginQobuz"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "kalinka_plugin_qobuz._version.__version__"}

[tool.setuptools_scm]
write_to = "src/kalinka_plugin_qobuz/_version.py"
tag_regex = "^kalinka-plugin-qobuz-v(?P<version>\\d+\\.\\d+\\.\\d+)$"
git_describe_command = "git describe --dirty --tags --long --match kalinka-plugin-qobuz-v*"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "1.0.0"
search_parent_directories = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "smoke: smoke tests for basic functionality",
    "integration: integration tests",
]